--- a/reports/BHallum_RShuhart_Unit6CaseStudy_ModernR.Rmd
+++ b/reports/BHallum_RShuhart_Unit6CaseStudy_ModernR.Rmd
@@ -5,8 +5,16 @@ date: "February 2017"
 output:
   html_notebook: default
   html_document: default
+  pdf_document: default
 subtitle: MSDS 7333-401
 ---
+# Questions to answer
+1. Which of these two MAC addresses should be used and which should not be used for RTLS? 
+2. Which MAC address yields the best prediction of location?
+3. Does using data for both MAC addresses simultaneously yield more, or less, accurate prediction of location?
+4. For what range of values of weights are you able to obtain better prediction values than for the unweighted k-nearest neighbor approach? 
+
+
 ## Abstract
 blah blah blah...
 
@@ -134,11 +142,6 @@ paste("There are ", format(sum(complete.cases(offlineByTime)),big.mark=",",scien
 HistogramContinuous(offlineByTime[,allsigs])
 ```
 
-#### (Fig. 4) Correlation of Signal Stregths <- Might be something to dicuss here or maybe not
-```{r}
-CorrelationContinuous(offlineByTime[,allsigs], use = "na.or.complete")
-```
-
 #### Create Train Data Set by Using Average Signal
 ```{r}
 offlineByAvgSig <- group_by(offline, posXY, posX, posY, mac,  angle) %>%
@@ -221,8 +224,7 @@ The above results show that, without accounting for the angle of the signal and 
 
 We want to improve these results by limiting the angle observed and using the best possible K within the KNN prediction. The following functions and graphs achieve both of these goals.
 
-functions hidden below
-```{r, echo=TRUE}
+```{r, echo=FALSE}
 # function to estimate using KNN the X Y of the online data
 predictXYKNN <- function(offline_signals, online_signals, 
                          offline_posX, offline_posY, k){
@@ -295,6 +297,22 @@ k_Eval <- function(offlineByAvgSig, onlineByAvgSig, k_max){
 }
 ```
 
+```{r}
+# Create weighted data
+
+wt_signals <- function(ByAvgSig){
+  signals <- select(ByAvgSig, -posXY, -posX, -posY, -angle) 
+  loc_ang <- select(ByAvgSig, posXY, posX, posY, angle)
+  
+  weighted_signals <- (1/signals) / rowSums(1/signals)
+  
+  return(cbind(loc_ang, weighted_signals))
+}
+
+wtOfflineByAvgSig <- wt_signals(offlineByAvgSig)
+wtOnlineByAvgSig <- wt_signals(onlineByAvgSig)
+```
+
 ```{r, fig.align='center'}
 mse_allsigs <-  k_Eval(offlineByAvgSig, onlineByAvgSig, 20)
 mse_allsigs$Method <- "All Signals"
@@ -325,77 +343,26 @@ ggplot(mse_all, aes(k, MSE)) +
   labs(title="(Fig. 4) - Three Signal Methods - Unweighted and Weighted") 
 
 ```
-
-```{r}
-library(xtable)
+Table - Best Results by Method
+```{r, echo=FALSE}
 # Table - Best Results by Method
-t <- mse_all %>% group_by(Method) %>% top_n(-1,MSE) %>% arrange(MSE) %>% select(Method, k, MSE)
-
-xtable(t, caption="Table 1 - Best MSE and k by Method")
+mse_all %>% group_by(Method) %>% top_n(-1,MSE) %>% arrange(MSE) %>% select(Method, k, MSE)
 ```
 
 From the graphs above, we are able to determine the best value of K to use when predicting the location of the signal reading device. We find the best K to use for utilizing all 7 routers is 4, which leads to an MSE of 201.34. When the router 00:0f:a3:39:e1:c0 is removed from the list, we use a K of 8 to obtain the best MSE of 207.23. Finally, removing the router 00:0f:a3:39:dd:cd, as is done by the original research team, results in a K of 5 with an MSE of 264.20.
 
 From these results, we determine that the best method of determining location is to leave both of the routers included in the data set as it produces the smallest error, and thus, better accuracy. However, we know that there are only supposed to by 6 routers and these 2 that we are testing for elimination, are tagged at being in the same spot. Knowing that, it would be ideal to remove 00:0f:a3:39:e1:c0 instead of 00:0f:a3:39:dd:cd to achieve a smaller error when predicting the location of the device.
 
-#### Which of these two MAC addresses should be used and which should not be used for RTLS? 
-It appears keeping both has the lowest MSE 
-
-
-#### Which MAC address yields the best prediction of location?
-00:0f:a3:39:dd:cd
-
-
-#### Does using data for both MAC addresses simultaneously yield more, or less, accurate prediction of location?
-more accurate
-
-
-For what range of values of weights are you able to obtain better prediction values than for the unweighted k-nearest neighbor approach? 
-
 ### Weighted
 
 In attempt to improve the accuracy of predicting location, stronger signals will be up-weighted relative to the other. This will allow us to give stronger, closer signals a larger impact on determining the location than those that are weaker and further away. We use the weighting fraction below to achieve this result.
 
 #### $\frac{1/d}{\sum_{i=1}^k 1/d_i}$ 
-```{r}
-# W
 
-wt_signals <- function(ByAvgSig){
-  signals <- select(ByAvgSig, -posXY, -posX, -posY, -angle) 
-  loc_ang <- select(ByAvgSig, posXY, posX, posY, angle)
-  
-  weighted_signals <- (1/signals) / rowSums(1/signals)
-  
-  return(cbind(loc_ang, weighted_signals))
-}
-
-wtOfflineByAvgSig <- wt_signals(offlineByAvgSig)
-wtOnlineByAvgSig <- wt_signals(onlineByAvgSig)
-```
-
-```{r}
-wtK_20 <- k_Eval(wtOfflineByAvgSig, wtOnlineByAvgSig, 20)
-plot_k_eval(wtK_20, "(Fig. 8) Weighted All AP Signals")
-print(paste("The best MSE:",top_n(wtK_20,-1,MSE)[2], "with a k of:", 
-            top_n(wtK_20,-1,MSE)[1])) # Negative 1 is to get lowest MSE
-```
-
-```{r}
-wtk_20_no_e1c0 <- k_Eval(select(wtOfflineByAvgSig, -sig_c0), 
-                       select(wtOnlineByAvgSig, -sig_c0), 20)
-plot_k_eval(wtk_20_no_e1c0, "(Fig. 9) Weighted Using 00:0f:a3:39:dd:cd AP Signal")
-print(paste("The best MSE:",top_n(wtk_20_no_e1c0,-1,MSE)[2], "with a k of:",
-            top_n(wtk_20_no_e1c0,-1,MSE)[1])) # Negative 1 is to get lowest MSE
-```
-
-```{r}
-wtk_20_no_ddcd <- k_Eval(select(wtOfflineByAvgSig, -sig_cd), 
-                       select(wtOnlineByAvgSig, -sig_cd), 20)
-plot_k_eval(wtk_20_no_ddcd, "(Fig. 10) Using 00:0f:a3:39:e1:c0 AP Signal")
-print(paste("The best MSE:",top_n(wtk_20_no_ddcd,-1,MSE)[2], "with a k of:",
-            top_n(wtk_20_no_ddcd,-1,MSE)[1])) # Negative 1 is to get lowest MSE
-```
 From the above results, it seems that by weighting the signal strength, our estimate of distance, we do not improve the accuracy of the nearest neighbor calculation. Without weighting we saw an MSE of 201.34 while we see an MSE of 335.45 with the weighting. Removing 00:0f:a3:39:e1:c0 instead of 00:0f:a3:39:dd:cd still provides the best accuracy result. For the case of weighting, it also is not advised to leave both signals in, as only have 6 signals with 00:0f:a3:39:dd:cd included produces the best MSE of 335.45 compared to the MSE of all 7 routers included of 335.70.
+
+
+
 
 ```{r, fig.height=5, fig.width=7}
 k_4_all_sig_no_wt <- pred_XY_Nbr_Ang(offlineByAvgSig, onlineByAvgSig, 4)
