--- a/reports/BHallum_RShuhart_Unit6CaseStudy_ModernR.Rmd
+++ b/reports/BHallum_RShuhart_Unit6CaseStudy_ModernR.Rmd
@@ -3,9 +3,9 @@ title: "Predicting Location via Indoor Positioning Systems"
 author: "Brett Hallum, Chris Ficklin, and Ryan Shuhart"
 date: "February 2017"
 output:
-  pdf_document: default
   html_notebook: default
   html_document: default
+  pdf_document: default
 subtitle: MSDS 7333-401
 ---
 # Questions to answer[remove later]
@@ -105,7 +105,7 @@ ggplot(building, aes(x=posX, y=posY)) +
         panel.grid.minor=element_blank(),
         axis.ticks=element_blank())
 ```
-
+Figure 1 plots the current floor plan of the warehouse and the locations of the training points, seen in black, and the test points, seen in blue. The training points, or Offline data, are 1 meter apart.
 ### Offline Missing Data
 ```{r, echo=FALSE}
 offlineByTime %>% summarize_each(funs(sum(is.na(.))))
@@ -129,6 +129,7 @@ paste("There are ", format(sum(complete.cases(offlineByTime)),big.mark=",",scien
 ```{r, echo=FALSE}
 HistogramContinuous(offlineByTime %>% select(-posXY, -time, -angle))
 ```
+The above histograms show the frequency of signal strengths recorded for each of the routers producing signals. The further to the right on each of the graphs, the stronger the signal is. The signal strength at any given point is related to the distance away from the source.
 
 #### Create Train Data Set by Using Average Signal
 ```{r, echo=FALSE}
@@ -146,21 +147,17 @@ offlineByAvgSig <- group_by(offline, posXY, posX, posY, mac,  angle) %>%
 
 kable(select(offlineByAvgSig[1:5,], -posXY), caption="Offline Data - First Observations of Signal Averages by Postion and Angle")
 ```
-
-#### Check if Missing Data After Average Aggregation <- probably could remove this for report
-```{r, echo=FALSE}
-offlineByAvgSig %>% summarize_each(funs(sum(is.na(.))))
-```
+To account for the multiple entries of data for a given time, angle, position, and MAC address, the signal strengths are averaged to provide a single row of signal values for a given reading. This provides us with an appropriate training data set without repeats of data points.
 
 ### Online Data
-Online Data has duplicate observations given the time, position, mac, and angle. <-add more!
+Online Data has duplicate observations given the time, position, mac, and angle. Similar to the training data set above, the signal strengths will need to be averaged for situations where these tuplets of data occur, resulting in a single series of signal data for a given position, mac address and angle.
 ```{r, echo=FALSE}
 percDuplicated <- nrow(online_allmacs[duplicated(online_allmacs[,c("time", "posXY", "mac", "angle")]),])/nrow(online_allmacs)
 
 paste(sprintf("%.1f", percDuplicated*100), "% of the online observations are duplicated.", sep="")
 ```
 
-The online data used for knn is grouped by access point, position, and angle and will average each of the signal observations.
+The online data used for knn is grouped by access point, position, and angle and will average each of the signal observations. This averaging is done, as noted above, to account for multiple positions, angle and MAC addresses having multple signal readings.
 ```{r, echo=FALSE}
 onlineByAvgSig <- group_by(online_allmacs, posXY, posX, posY, mac,  angle) %>%
   summarize(avgSig = mean(signal)) %>%
@@ -206,9 +203,9 @@ sum( rowSums( (test_estXYk1 - onlineByAvgSig[,c("posX", "posY")])^2) )
 sum( rowSums( (test_estXYk3 - onlineByAvgSig[,c("posX", "posY")])^2) )
 sum( rowSums( (test_estXYk5 - onlineByAvgSig[,c("posX", "posY")])^2) )
 ```
-The above results show that, without accounting for the angle of the signal and limiting the possible location based on angle that the signal was received at, we get the best KNN result when using K=5. This leads to an mean square error of 252.47, which is significantly better than the K=1 MSE of 529.04 and marginally better than the MSE for K=3 of 267.63.
+The above results from our K Nearest Neighbors approximation of location show, without accounting for the angle of the signal and limiting the possible location based on angle that the signal was received at, we get the best KNN result when using K=5. This leads to an mean square error of 252.47, which is significantly better than the K=1 MSE of 529.04 and marginally better than the MSE for K=3 of 267.63.
 
-We want to improve these results by limiting the angle observed and using the best possible K within the KNN prediction. The following functions and graphs achieve both of these goals.
+We want to improve these results by limiting the angle observed and using the best possible K within the KNN prediction. The following graphs assit us in achieving both of these goals.
 
 ```{r, include=FALSE}
 # function to estimate using KNN the X Y of the online data
@@ -299,7 +296,7 @@ ggplot(mse_all_no_wt, aes(k, MSE)) +
   geom_line(aes(color=Method), size=1.4) + 
   theme_classic() + 
   scale_colour_manual(values=c("#0C38E8","#0CE85A", "#00E6FF")) +
-  labs(title="(Fig. #?) - Three Signal Methods - Unweighted") 
+  labs(title="(Fig. 4) - Three Signal Methods - Unweighted") 
 
 ```
 
@@ -329,17 +326,17 @@ wtOfflineByAvgSig <- wt_signals(offlineByAvgSig)
 wtOnlineByAvgSig <- wt_signals(onlineByAvgSig)
 ```
 
-From the graphs above, we are able to determine the best value of K to use when predicting the location of the signal reading device. We find the best K to use for utilizing all 7 routers is 4, which leads to an MSE of 201.34. When the router 00:0f:a3:39:e1:c0 is removed from the list, we use a K of 8 to obtain the best MSE of 207.23. Finally, removing the router 00:0f:a3:39:dd:cd, as is done by the original research team, results in a K of 5 with an MSE of 264.20.
+From Figure 4 above, we are able to determine the best value of K to use when predicting the location of the signal reading device. We find the best K to use for utilizing all 7 routers is 4, which leads to an MSE of 201.34. When the router 00:0f:a3:39:e1:c0 is removed from the list, we use a K of 8 to obtain the best MSE of 207.23. Finally, removing the router 00:0f:a3:39:dd:cd, as is done by the original research team, results in a K of 5 with an MSE of 264.20.
 
-From these results, we determine that the best method of determining location is to leave both of the routers included in the data set as it produces the smallest error, and thus, better accuracy. However, we know that there are only supposed to by 6 routers and these 2 that we are testing for elimination, are tagged at being in the same spot. Knowing that, it would be ideal to remove 00:0f:a3:39:e1:c0 instead of 00:0f:a3:39:dd:cd to achieve a smaller error when predicting the location of the device.
+From these results, we determine that the best method of determining location is to leave both of the routers included in the data set as it produces the smallest error, and thus, better accuracy. However, we know that there are only supposed to be 6 routers in the warehouse and these 2 that we are testing for elimination, 00:0f:a3:39:dd:cd and 00:0f:a3:39:e1:c0, are tagged at being in the same spot. Knowing this information, it is ideal to remove 00:0f:a3:39:e1:c0 instead of 00:0f:a3:39:dd:cd to achieve a smaller error when predicting the location of the device.
 
 ### Weighted
 
-In attempt to improve the accuracy of predicting location, stronger signals will be up-weighted relative to the other. This will allow us to give stronger, closer signals a larger impact on determining the location than those that are weaker and further away. We use the weighting fraction below to achieve this result.
+In an attempt to improve the accuracy of predicting location, we up-weight stronger signals relative to weaker signals. This will allow us to give strong, closer signals a larger impact on determining the location than those that are weak and further away. We use the weighting fraction below to achieve this result, where we use the signal strenght as an estimator for distance.
 
 $$\frac{1/d}{\sum_{i=1}^k 1/d_i}$$
 
-From the above results, it seems that by weighting the signal strength, our estimate of distance, we do not improve the accuracy of the nearest neighbor calculation. Without weighting we saw an MSE of 201.34 while we see an MSE of 335.45 with the weighting. Removing 00:0f:a3:39:e1:c0 instead of 00:0f:a3:39:dd:cd still provides the best accuracy result. For the case of weighting, it also is not advised to leave both signals in, as only have 6 signals with 00:0f:a3:39:dd:cd included produces the best MSE of 335.45 compared to the MSE of all 7 routers included of 335.70.
+From the results in Figure 5 below, it seems that by weighting the signal strength, our estimate of distance, we do not improve the accuracy of the nearest neighbor calculation. Without weighting the best MSE was 201.34 while we see an MSE of 335.45 with the weighting. Removing 00:0f:a3:39:e1:c0 instead of 00:0f:a3:39:dd:cd still provides the best accuracy result. For the case of weighting, it is not advised to leave both signals in, as the use of 6 signals with 00:0f:a3:39:dd:cd included produces the best MSE of 335.45 compared to the MSE of all 7 routers included of 335.70.
 ```{r, echo=FALSE}
 
 mse_allsigswt <-  k_Eval(wtOfflineByAvgSig, wtOnlineByAvgSig, 20)
@@ -357,7 +354,7 @@ ggplot(mse_all_wt, aes(k, MSE)) +
   geom_line(aes(color=Method), size=1.4) + 
   theme_classic() + 
   scale_colour_manual(values=c("#E8AD0C", "#E8110C", "#FF6800")) +
-  labs(title="(Fig. #?) - Three Signal Methods - Weighted") 
+  labs(title="(Fig. 5) - Three Signal Methods - Weighted") 
 
 ```
 Table - Best Results by Method
@@ -381,7 +378,7 @@ ggplot(mse_all, aes(k, MSE)) +
   theme_classic() + 
   scale_colour_manual(values=c("#0C38E8","#0CE85A", "#E8AD0C", 
                                "#E8110C", "#00E6FF","#FF6800")) +
-  labs(title="(Fig. #?) - Three Signal Methods - Unweighted and Weighted") 
+  labs(title="(Fig. 6) - Three Signal Methods - Unweighted and Weighted") 
 
 ```
 Table - Best Results by Method
