--- a/reports/BHallum_RShuhart_Unit6CaseStudy_ModernR.Rmd
+++ b/reports/BHallum_RShuhart_Unit6CaseStudy_ModernR.Rmd
@@ -33,7 +33,10 @@ I like to paint by color..
 library(dplyr) # Data transformations
 library(tidyr) # Data transformations
 library(ggplot2) # Visualizations
-#library(tibble)
+library(data.table)
+library(scales)
+library(gridExtra)
+library(stats)
 library(knitr) # Markdown tables
 library(DataExplorer) # Simplyfied common ggplots
 library(FNN) #KNN Regression
@@ -108,12 +111,44 @@ ggplot(building, aes(x=posX, y=posY)) +
 Figure 1 plots the current floor plan of the warehouse and the locations of the training points, seen in black, and the test points, seen in blue. The training points, or Offline data, are 1 meter apart.
 ### Offline Missing Data
 ```{r, echo=FALSE}
-offlineByTime %>% summarize_each(funs(sum(is.na(.))))
+# Modified from DataExplorer library by boxuancui 
+# https://github.com/boxuancui/DataExplorer
+plotMissing <- function(data, title=NULL) {
+  ## Declare variable first to pass R CMD check
+  feature <- num_missing <- pct_missing <- group <- NULL
+  ## Check if input is data.table
+  is_data_table <- TRUE
+  ## Detect input data class
+  data_class <- class(data)
+  ## Set data to data.table
+  if (!is_data_table) {data <- data.table(data)}
+  ## Extract missing value distribution
+  missing_value <- data.table("feature" = names(data), "num_missing" = sapply(data, function(x) {sum(is.na(x))}))
+  missing_value[, feature := factor(feature, levels = feature[order(-rank(num_missing))])]
+  missing_value[, pct_missing := num_missing / nrow(data)]
+  missing_value[pct_missing < 0.05, group := "Good"]
+  missing_value[pct_missing >= 0.05 & pct_missing < 0.4, group := "OK"]
+  missing_value[pct_missing >= 0.4 & pct_missing < 0.8, group := "Bad"]
+  missing_value[pct_missing >= 0.8, group := "Remove"][]
+  ## Set data class back to original
+  if (!is_data_table) {class(missing_value) <- data_class}
+  ## Create ggplot object
+  output <- ggplot(missing_value, aes_string(x = "feature", y = "num_missing", fill = "group")) +
+    geom_bar(stat = "identity", colour = "black", alpha = 0.4) +
+    geom_text(aes(label = paste0(round(100 * pct_missing, 0), "%")), hjust = -0.15, size = 3.5) +
+    scale_fill_manual("Group", values = c("Good" = "#1a9641", "OK" = "#a6d96a", "Bad" = "#fdae61", "Remove" = "#d7191c"), breaks = c("Good", "OK", "Bad", "Remove")) +
+    scale_y_continuous(labels = comma) +
+    theme(legend.position = c("bottom")) + coord_flip() +
+    xlab("Features") + ylab("Number of missing rows") + ggtitle(title)
+  ## Print plot
+  print(output)
+  ## Set return object
+  return(invisible(missing_value))
+}
+
+plotMissing(offlineByTime, "(Fig. 2) - Offline Missing Data")
 ```
-#### (Fig. 2) Missing Data per Router by Percent
-```{r, echo=FALSE}
-PlotMissing(offlineByTime)
-```
+
 
 Many of the routers do not receive data about each of the data points from the device. From the missing data, we see that each receiver misses about 18% of the signals produced by emitting device. This contrasts with 2 of the routers, 00:0f:a3:39:dd:cd and 00:0f:a3:39:e1:c0, which miss around 1% of the signals emitted.
 
@@ -127,6 +162,7 @@ paste("There are ", format(sum(complete.cases(offlineByTime)),big.mark=",",scien
 
 #### (Fig. 3) Histogram of Signal Strengths
 ```{r, echo=FALSE}
+# This type of plot does not allow a title of the grid
 HistogramContinuous(offlineByTime %>% select(-posXY, -time, -angle))
 ```
 The above histograms show the frequency of signal strengths recorded for each of the routers producing signals. The further to the right on each of the graphs, the stronger the signal is. The signal strength at any given point is related to the distance away from the source.
@@ -392,17 +428,55 @@ kable(mse_all %>%
       caption = "Best Results - All")
 ```
 
-```{r, echo=FALSE}
-k_4_all_sig_no_wt <- pred_XY_Nbr_Ang(offlineByAvgSig, onlineByAvgSig, 4)
 
+
+```{r}
+
+best_all_sig <- pred_XY_Nbr_Ang(offlineByAvgSig, onlineByAvgSig, 4)
+best_cc <-  pred_XY_Nbr_Ang(select(offlineByAvgSig, -sig_c0), select(onlineByAvgSig, -sig_c0), 8)
+best_c0 <-  pred_XY_Nbr_Ang(select(offlineByAvgSig, -sig_cd), select(onlineByAvgSig, -sig_cd), 6) 
+
+
+best_all_sig_dists <- best_all_sig %>% 
+  transmute(Dist = sqrt((posX - posXest)^2 + (posY - posYest)^2)) %>% 
+  arrange(desc(Dist))
+best_all_sig_dists$Method <- "Best All Signals"
+best_all_sig_dists$Index <- seq.int(nrow(best_all_sig_dists))
+
+best_cc_dists <- best_cc %>% 
+  transmute(Dist = sqrt((posX - posXest)^2 + (posY - posYest)^2)) %>% 
+  arrange(desc(Dist))
+best_cc_dists$Method <- "Best 6 Signals dd:cc"
+best_cc_dists$Index <- seq.int(nrow(best_cc_dists))
+
+best_c0_dists <- best_c0 %>% 
+  transmute(Dist = sqrt((posX - posXest)^2 + (posY - posYest)^2)) %>% 
+  arrange(desc(Dist))
+best_c0_dists$Method <- "Best 6 Signals e1:c0"
+best_c0_dists$Index <- seq.int(nrow(best_c0_dists))
+
+best_no_wt <- rbind(best_all_sig_dists, 
+                    best_cc_dists,
+                    best_c0_dists)
+
+ggplot(best_no_wt, aes(y = Dist, x=Index, color=Method)) + 
+  geom_area(stat="identity", size=.1, position = position_dodge(width = 0.0), alpha=.75, aes(fill=Method))+ 
+  scale_colour_manual(values=c("#0C38E8","#0CE85A", "#00E6FF")) +
+  scale_fill_manual(values=c("#0C38E8","#0CE85A", "#00E6FF")) +
+  labs(title="(Fig. #) Area Plot of Sorted Errors ")
+```
+The above shows 
+
+
+```{r, echo=FALSE}
 p <- ggplot(building, aes(x=posX, y=posY)) + 
         geom_point(aes(shape=Type, color=Type)) + 
         geom_text(data=filter(AP, !(Label %in% c("sig_90", "sig_8d"))), aes(label=Label), nudge_y = -.6) +
         geom_text(data=filter(AP, Label == "sig_90"), aes(label=Label), nudge_x = 2) +
         geom_text(data=filter(AP, Label == "sig_8d"), aes(label=Label), nudge_x = -2) +
-        labs(title="Floor Plan") + 
-        scale_shape_manual(values = c(8,16,1)) +
-        scale_colour_manual(values=c("red","black","blue")) +
+        labs(title="Floor Plan - Error Bars for Best KNN Using All Signals - No Weighting") + 
+        scale_shape_manual(values = c(8,16,16)) +
+        scale_colour_manual(values=c("red","black","#0DC3FF")) +
         theme_bw() +
         theme(axis.title.x=element_blank(), 
               axis.title.y=element_blank(), 
@@ -410,18 +484,9 @@ p <- ggplot(building, aes(x=posX, y=posY)) +
               axis.text.y=element_blank(),
               panel.grid.major=element_blank(),
               panel.grid.minor=element_blank(),
-              axis.ticks=element_blank())
+              axis.ticks=element_blank()) + 
+  geom_segment(data=best_all_sig, aes(x = posX, y=posY, xend = posXest, yend = posYest), color="red", size=1)
 
-p + geom_segment(data=k_4_all_sig_no_wt, aes(x = posX, y=posY, xend = posXest, yend = posYest), color="red", size=1)
+p 
 
 ```
-
-```{r}
-
-d <- k_4_all_sig_no_wt %>% 
-  transmute(Dist = sqrt((posX - posXest)^2 + (posY - posYest)^2)) %>% 
-  arrange(desc(Dist))
-
-ggplot(d, aes(Dist)) + geom_bar()
-```
-
